2008-12-08  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs:
	* Layer.cs:
	* Drawing/MapDrawer.cs:
	* Xml/Serialization/MapSerializer.cs: add minscale/maxscale for
	layer,style, and labels

2008-12-08  Scott Ellington  <scott.ellington@gmail.com>

	* Layer.cs:
	* Drawing/MapDrawer.cs:
	* Xml/Serialization/MapSerializer.cs: add layer.Visible

2008-12-05  Scott Ellington  <scott.ellington@gmail.com>

	* Drawing/MapDrawer.cs: add a polyline labelling algorithm

2008-12-05  Scott Ellington  <scott.ellington@gmail.com>

	* Data/Shapefile/Shapefile.cs: fix bug in overload call

	* Data/KeyholeMarkupLanguage.cs: use label field for placemark names if
	available

2008-12-05  Scott Ellington  <scott.ellington@gmail.com>

	* Map.cs:
	* Drawing/MapDrawer.cs:
	* Xml/Serialization/MapSerializer.cs: add Map.BackgroundColor

2008-12-05  Scott Ellington  <scott.ellington@gmail.com>

	* Drawing/MapDrawer.cs: remove console write

2008-12-05  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs:
	* Drawing/MapDrawer.cs:
	* Xml/Serialization/MapSerializer.cs: add Style.LabelAngle

2008-12-05  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs:
	* Drawing/MapDrawer.cs:
	* Xml/Serialization/MapSerializer.cs: add Style.LabelDecoration,
	Style.LabelOutlineColor, and Style.LabelOutlineWidth

2008-12-04  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs:
	* Drawing/MapDrawer.cs:
	* Xml/Serialization/MapSerializer.cs: add Style.LabelPosition and
	Style.LabelPixelOffset

2008-12-04  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs:
	* Drawing/MapDrawer.cs:
	* Xml/Serialization/MapSerializer.cs: add Style.LabelFontEmSize

2008-12-04  Scott Ellington  <scott.ellington@gmail.com>

	* Drawing/MapDrawer.cs: center label

2008-12-04  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs:
	* Drawing/MapDrawer.cs:
	* Xml/Serialization/MapSerializer.cs: add Label properties to Style

	* Projection/ProjFourWrapper.cs: preserve feature properties in point