@@ -1,6 +1,12 @@
 2008-12-08  Scott Ellington  <scott.ellington@gmail.com>
 
 	* Style.cs:
+	* Drawing/MapDrawer.cs:
+	* Xml/Serialization/MapSerializer.cs: add Style.LabelCustomFont
+
+2008-12-08  Scott Ellington  <scott.ellington@gmail.com>
+
+	* Style.cs:
 	* Layer.cs:
 	* Drawing/MapDrawer.cs:
 	* Xml/Serialization/MapSerializer.cs: add minscale/maxscale for
